--- a/configs/evaluate_graphquestions_filtered.yaml
+++ b/configs/evaluate_graphquestions_filtered.yaml
@@ -19,7 +19,7 @@ evaluation:
 
 dataset:
   type: WebQSPDataset
-  path_to_dataset: "data/graphquestions/input/graph.test.entities.json"
+  path_to_dataset: "data/graphquestions/input/graph.test.entities.all_pos.filtered_on_all.no_partials.json"
   subsample: 1.0
 
 entity.linking:  # These parameters are used to instantiate an entity linker
@@ -28,7 +28,7 @@ entity.linking:  # These parameters are used to instantiate an entity linker
 
   linker: MLLinker
   linker.options:
-    precomputed_candidates: "data/graphquestions/preprocessed/graph.test.entities.candidates.json"
+      #precomputed_candidates: "data/graphquestions/preprocessed/graph.test.entities.candidates.json"
     max_mention_len: 4
     num_candidates: 1
     prefer_longer_matches: True
@@ -37,7 +37,7 @@ entity.linking:  # These parameters are used to instantiate an entity linker
     mention_context_size: 2
 
 wikidata:
-  backend: "http://localhost:8890/sparql"
+  backend: "http://100.97.69.173:8890/sparql"
   timeout: 20
   filter.out.relation.classes: "rq"
   
