--- a/configs/optimize.yaml
+++ b/configs/optimize.yaml
@@ -50,7 +50,7 @@ model:  # If an entity linker features a trained model, these parameters are use
   evaluate.on.dataset.after: 10
 
 wikidata:
-  backend: "http://knowledgebase:8890/sparql"
+  backend: "http://localhost:8890/sparql"
   timeout: 20
   filter.out.relation.classes: "rq"
   
